# dual-arm-variable-impedance-learning

./: .gitattributes  .gitignore  DUAL_ARM_ENV.md  LICENSE  MUJOCO_LOG.TXT  README.md  WAYLAND_SETUP.md  pyproject.toml  requirements.txt  setup.py
assets/models/: dual_arm_panda.xml
davil/envs/: MUJOCO_LOG.TXT  __init__.py  dual_arm_env.py  trajectory_generator.py
davil/kinematics/: MUJOCO_LOG.TXT  cartesian_controllers.py  franka_kinematics.py  interactive_panda.py  quintic_trajectory_generator.py  run_cartesian_pd.py  run_impedance.py  run_smooth_motion.py  run_trajectory.py
davil/kinematics/cartesian_pd/: run_cartesian_pd.py  run_cartesian_pd_ik.py
davil/kinematics/impedance/: run_impedance.py
davil/kinematics/trajectory/: run_smooth_motion.py  run_trajectory.py
davil/visualization/: animation_franka.py  franka_visualiser.py  mujoco_franka_withDH.py  visualize_panda_mujoco.py
docs/: week0.md
docs/weekly_progress/: task_list.md  week0.md  week00.md
docs/weekly_progress/week01/: coordinate_tranformations.md  forward_kinematics.md  franka_kinematics.md  trajectory_generator.md  week01.md
docs/weekly_progress/week02/: impedance control.md  mujoco_validation.md  trajectory_generator.md  week02.md
docs/weekly_progress/week04/: PD_controller
docs/weekly_progress/week05/: PPO.md
scripts/: basic_mujoco.py  example_dual_arm.py  test_dual_arm_env.py  test_installation.py  test_visual_dual_arm.py  visualize_kinematics.py
tests/: MUJOCO_LOG.TXT  test_kinematics.py  test_panda_mujoco.py
