[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "davil"
version = "0.1.0"
description = "DA-VIL: Adaptive Dual-Arm Manipulation with RL and Variable Impedance Control"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Mehrish"}]

dependencies = [
    "numpy",
    "gymnasium",
    "mujoco",
]